Implement search UI

--- a/src/scss/variables/_base-variables.scss
+++ b/src/scss/variables/_base-variables.scss
@@ -5,3 +5,4 @@ $primary: rgb(220,34,23);
 $body-content: rgb(255,255,255);
 $secondary: rgb(178,29,21);
 $accent: rgb(205,32,22);
+$placeholder-text-color: rgb(140, 140, 140);
