--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -13,4 +13,10 @@
   @media (max-width: 840px) {
     display: flex;
   }
+
+  @media (max-width: 540px) {
+    display: flex;
+    margin-top: 1.5em;
+  }
+
 }
