--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -1,5 +1,29 @@
+.loader-overlay {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  visibility: hidden;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 150;
+}
+
 .loader {
-  z-index: 50;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
+  color: rgba(255, 255, 255, 0.9);
+  animation: spin 1.2s infinite linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .header-composite {
