--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -8,6 +8,10 @@
   font-size: 16px;
 }
 
+.html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: base-variables.$background-color;
 }
@@ -15,6 +19,8 @@ body {
 #app {
   @include base-mixins.set-font();
   color: base-variables.$primary;
+  height: 100vh;
+  width: 100vw;
 }
 
 
@@ -54,6 +60,10 @@ body {
   flex: 1;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 // Justify content
 
 .justify-content__center {
@@ -70,6 +80,14 @@ body {
 
 .justify-content__space-evenly {
   justify-content: space-evenly;
+}
+
+.justify-content__flex-start {
+  justify-content: flex-start;
+}
+
+.justify-content__flex-end {
+  justify-content: flex-end;
 }
 
 // Align Items
@@ -228,4 +246,15 @@ body {
 
 .bg-color-body-content {
   background-color: base-variables.$body-content;
+}
+
+// Animations
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
