--- a/src/scss/components/movie.scss
+++ b/src/scss/components/movie.scss
@@ -62,3 +62,8 @@
   margin-top: 0.4em;
   color: base-variables.$body-content;
 }
+
+a {
+  text-decoration: none;
+  color: base-variables.$primary;
+}
