Improve accessibility, add meta data, change title and favicon.ico
Minor updates

Minor updates

Deploy to live env on netlify

Deploy to live env on netlify

Deploy to live env on netlify with updates

Deploy to live env on netlify with updates

--- a/src/scss/components/search.scss
+++ b/src/scss/components/search.scss
@@ -18,7 +18,7 @@
   outline: none;
   margin-left: 0.3em;
   font-weight: 300;
-  color: base-variables.$placeholder-text-color;
+  color: black;
 
   @media (max-width: 840px) {
     width: auto;
