Improve accessibility, add meta data, change title and favicon.ico

--- a/src/scss/components/movie.scss
+++ b/src/scss/components/movie.scss
@@ -8,6 +8,7 @@
   border-radius: 40px;
   transition: 0.1s all linear;
   overflow: hidden;
+  background-position: center;
 
   &:hover {
     border-left: 4px solid;
