--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -11,7 +11,11 @@
 
 .header,
 .body-main {
-  padding: 0 6em 0.5em;
+  padding: 0 6% 0.1em;
+
+  @media (max-width: 1050px) {
+    padding: 0 5% 0.1em;
+  }
 
   @media (max-width: 480px) {
     padding: 0.5em 2em;
