--- a/src/scss/components/movie.scss
+++ b/src/scss/components/movie.scss
@@ -3,12 +3,12 @@
 .movie-container {
   cursor: pointer;
   width: 380px;
-  height: 520px;
-  margin-bottom: 2.5em;
+  height: 500px;
   border-radius: 40px;
   transition: 0.1s all linear;
   overflow: hidden;
   background-size: cover;
+  margin: 5px 5px 2.5em;
 
   &:hover {
     border-left: 5px solid;
@@ -20,7 +20,7 @@
 
   @media (max-width: 480px) {
     width: 83vw;
-    height: 380px;
+    height: 400px;
     background-size: auto;
 
     &:hover {
