--- a/src/scss/variables/_base-variables.scss
+++ b/src/scss/variables/_base-variables.scss
@@ -1,7 +1,7 @@
 // Only keep universal variables in this file, rest can be kept in specific variable file and imported when required
 
 $background-color: rgb(10,10,10);
-$primary: rgb(220,34,23);
+$primary: rgb(241, 21, 8);
 $body-content: rgb(255,255,255);
 $secondary: rgb(178,29,21);
 $accent: rgb(205,32,22);
